初始的软件设计文档

--- a/软件设计文档.md
+++ b/软件设计文档.md
@@ -1,1 +1,50 @@
 # 软件设计文档
+## 一、前端（MiniChat）
+### 1、技术选型以及理由
+前端采用Android作为开发工具，使用腾讯信鸽作为主要的消息处理
+
+* 腾讯信鸽：消息接受处理
+* SQLite：本地数据库管理
+
+腾讯信鸽推送是专业免费的第三方推送工具,能保证消息稳定到达和接收，并提供了相应的类作为接收消息后的处理。能在保证消息及时有效到达的同时保证省电省流量，提高到达率，提升点击效果转化。
+
+SQLite是一个开源的嵌入式关系数据库，内置在Android中。适用于嵌入式系统，嵌入到使用它的应用程序中。占用非常少，运行高效可靠，可移植性好。提供了零配置（zero-configuration）运行模式。SQLite数据库不仅提高了运行效率，而且屏蔽了数据库使用和管理的复杂性，程序仅需要进行最基本的数据操作，其他操作可以交给进程内部的数据库引擎完成。
+
+### 2、架构设计
+前端项目主要涉及应用界面和业务逻辑开发以及产品构建。本次实验的前端代码以及资源部分都放在MiniChat\app\src文件夹中，主要需要关注的是以下几部分：
+
+* main\java\com\example\caitzh\minichat：这个文件夹下存放java类，负责业务逻辑的处理
+* main\res:资源文件夹，存放图片等静态资源以及页面布局文件（layout文件夹）
+* AndroidManifest.xml：项目配置文件，对java类进行配置管理
+
+### 3、模块划分
+根据页面和业务逻辑，我们得到以下页面转换关系图
+![](http://i.imgur.com/bdk4zLV.png)
+
+根据页面转换关系图，我们主要分成聊天界面相关的Chat文件夹；Friends存放好友列表，添加好友等页面；Personal中存放个人信息页面以及相关类。在前端开发中，我们还需要对部分页面添加适配器进行页面与数据的交互，这部分放在Adapter中。使用数据库对这部分对本地数据进行管理，这部分放在MyDB文件夹中。同时，提供了一些公用的方法类用于图片获取和http连接交互等，这部分放在Util中。最后，还有自定义控件以及部分用例类的view文件夹。所有的文件，都是为了Activity页面的展示而服务。
+
+综合得到以下的文件树：
+
+	|—app:
+	|  —src
+	|    —main
+	|      —java
+	|      —res
+	|        —anmi:二维动画文件夹
+	|        —drawble:自定义样式所在文件夹
+	|        —layout:页面布局所在文件夹
+	|        —menu:菜单所在文件夹
+	|        —mipmap:静态图片所在文件夹
+	|        —values:一些长度值、RGB值定义所在文件夹
+	|      —java:
+	|      	 —Adapter：页面是配器文件夹
+	|      	 —Chat:聊天页面类相关文件夹
+	|      	 —Friends：好友相关类文件夹
+	|      	 —MyDB：数据库类文件夹
+	|      	 —Personal：个人信息相关类文件夹
+	|      	 —Util：通用方法类文件夹
+	|      	 —view：自定义控件以及部分用例类文件夹
+	|      —AndroidManifest.xml:整个项目的配置文件，里面包括布局服务的定义以及Activity栈方式等的定义
+	
+
+### 4、设计模式
