添加软件需求规格说明书初稿

--- a/软件需求规格说明书.md
+++ b/软件需求规格说明书.md
@@ -1,1 +1,41 @@
 # 软件需求规格说明书
+## 1、引言
+### 1.1、 目的
+本文档将描述项目的整体结构和功能结构概貌，从总体结构上对整个应用的功能以及性能需求进行详细描述。便于用户和开发人员进行沟通交流。
+### 1.2、 背景
+本次待开发软件为安卓聊天软件。用户可以使用此安卓软件注册账号，添加好友，登录聊天，修改个人信息等。
+### 1.3、 参考文献
+[1] GB-T8567-2006，《计算机软件文档编制规范》
+
+## 2、项目概述
+### 2.1、产品描述
+开发Android客户端应用程序，实现简单的聊天功能，并辅助有注册账号，登录、添加好友、删除好友、修改个人信息、查看好友，查看最近联系人的功能。
+### 2.2产品功能
+* 注册功能：进入应用后，可以通过注册按钮进入注册页面，通过邮箱可进行注册，注册需要进行邮箱验证码验证，邮箱为账户的唯一性标识
+* 登录功能：可使用注册时的账号和密码进行登录，登录后进入最近联系人页面。
+* 最近联系人页面：展示最近联系的好友列表，每个表项包括联系人头像，最后一条消息，时间以及对方昵称，长按可删除该聊天记录，点击进入聊天界面
+* 好友列表：展示此用户的好友列表，点击可进入聊天界面。
+* 个人信息：展示该用户的用户名，账号等信息，部分信息点击可修改
+* 聊天窗口：进行消息的展示、接收和发送
+* 添加好友：在好友列表页面点击添加按钮可进入添加好友页面，通过账号进行查找，并等待回复，接受者可以接收到信息，并同意或者拒绝
+### 2.3、用户群体
+使用手机进行社交的大众群体
+### 2.4、非一般性操作
+应用没有存储权限
+
+## 3、具体需求
+### 3.1、功能要求
+* 用户可以通过邮箱注册账号，并且相同的邮箱只能注册一个账号
+* 用户输入正确的账号和密码可以正常登陆
+* 用户可以查看最近联系人列表并看到相应的信息
+* 用户可以在查看个人信息并修改部分信息
+* 用户可以看到自己的所有好友
+* 用户可以通过账号选择添加好友，同时，能够同意或者拒绝好友添加请求
+* 用户可以与好友聊天，发送消息与接收消息
+
+### 3.2、平台要求
+* 前端为安卓客户端，需要安装在安卓系统手机上方可使用
+* 后端为python服务端，挂载在服务上使用
+
+### 3.3、可维护性
+* 代码模块清晰、注释合理、功能明确、接口丰富
