补充软件安装部署说明前端部分

--- a/安装部署说明.md
+++ b/安装部署说明.md
@@ -1,1 +1,15 @@
 # 安装部署说明
+**小组成员: 陈锐煌、蔡桐钊、陈海涛、郑斯达**
+## 前端
+首先需要先导出或者下载MiniChat的apk, 最低的Android版本为4.0.
+导出apk的方式为用Android Studio打开项目后,工具栏的**Build**->**Build APK**,导出完成时在AS的下方能看到如下提示
+![](./image/build.png)
+然后在项目文件夹下的**app**->**build**->**outputs**->**apk**下看到生成了**app-debug.apk**
+
+安装完成后,可以看到出现了MiniChat的图标
+![](./image/图标.png)
+接着需要到设置或手机中的其他软件管理软件对MiniChat进行授权,特别注意的是，存储权限必须要给
+![](./image/权限1.png)
+![](./image/权限2.png)
+
+授权后，软件便可以正常运行。
