补充软件需求规格说明书

--- a/软件需求规格说明书.md
+++ b/软件需求规格说明书.md
@@ -14,10 +14,12 @@
 * 注册功能：进入应用后，可以通过注册按钮进入注册页面，通过邮箱可进行注册，注册需要进行邮箱验证码验证，邮箱为账户的唯一性标识
 * 登录功能：可使用注册时的账号和密码进行登录，登录后进入最近联系人页面。
 * 最近联系人页面：展示最近联系的好友列表，每个表项包括联系人头像，最后一条消息，时间以及对方昵称，长按可删除该聊天记录，点击进入聊天界面
+* 删除聊天记录：在最近联系人页面长按相应条目则可删除对应的聊天记录
 * 好友列表：展示此用户的好友列表，点击可进入聊天界面。
 * 个人信息：展示该用户的用户名，账号等信息，部分信息点击可修改
 * 聊天窗口：进行消息的展示、接收和发送
 * 添加好友：在好友列表页面点击添加按钮可进入添加好友页面，通过账号进行查找，并等待回复，接受者可以接收到信息，并同意或者拒绝
+* 删除好友：在通讯录页面长按对应好友条目可删除好友
 ### 2.3、用户群体
 使用手机进行社交的大众群体
 ### 2.4、非一般性操作
@@ -34,8 +36,25 @@
 * 用户可以与好友聊天，发送消息与接收消息
 
 ### 3.2、平台要求
-* 前端为安卓客户端，需要安装在安卓系统手机上方可使用
+* 前端为安卓客户端，需要安装在安卓系统手机上,并且Android系统为4.0或以上方可使用
 * 后端为python服务端，挂载在服务上使用
 
 ### 3.3、可维护性
 * 代码模块清晰、注释合理、功能明确、接口丰富
+
+## 4、验收验证标准
+|序号|功能|详细操作|检验情况|
+|:-:|:-:|:-:|:-:|
+|1|注册|用户点击**前往注册**,按提示填写好昵称,账号，密码等信息后，点击注册，提示注册成功后跳转到登陆界面。如果注册失败，则会弹出提示|正常|
+|2|登录|用户输入账号和密码，点击登录。登录成功则进入到最近联系人界面，登录失败则弹出对应的提示信息|正常|
+|3|查看个人信息|用户登录后，点击下方的个人信息或者连续向右滑动，则可查看个人信息，包括头像，昵称等|正常|
+|4|修改基本信息|在个人信息页面，点击对应信息条目，则跳转到对应修改界面，修改后点击保存即可修改信息。|正常|
+|5|查找用户|在通讯录界面，点击右上角的**+**，即可跳转到查找用户界面，输入用户账号，即可查找用户，若账号不存在，则弹出提示，若账号存在，则跳转到用户信息页面|正常|
+|6|添加好友|查找用户成功后，若该用户不是您的好友，则可发送添加好友的请求，若是您的好友，则可以发送消息|正常|
+|7|好友请求|在接收到其他用户的添加好友的请求后，在通讯录页面，点击新的朋友，进入到好友请求列表中，点击相应的条目进入到处理界面，点击同意则该用户会添加到您的通讯录中。点击拒绝则拒绝添加||
+|8|搜索联系人|在通讯录界面，在搜索框内输入搜索内容，则会动态过滤并显示出符合的条目||
+|9|查看好友资料|在通讯录界面点击相应好友条目，则会跳转到好友详情界面，界面显示了好友当前资料||
+|10|发送消息|在聊天界面点击相应的条目或者在通讯录中点击好友后发送消息，可进入到对应的聊天界面，输入消息后点击发送，发送成功则会显示在界面中，若发送失败，则弹出相应提示||
+|11|接收消息|当接收到消息时，若在对应的聊天界面，则会直接显示出来，若不在对应的界面，则在最近联系人页面对应的条目会有小红点提示存在未读消息||
+|12|删除聊天记录|在最近联系人界面长按对应条目，点击弹出窗口的确定删除，则可删除与改好友的聊天记录||
+|13|删除好友|在通讯录页面长按对应好友，点击弹出窗口的确定删除，则可删除该好友||
