修改图片显示大小

--- a/用户使用手册.md
+++ b/用户使用手册.md
@@ -43,14 +43,14 @@ MiniChat微聊是一款简易版的聊天工具，包括登录注册，添加好
  * 输入密码和确认密码，点击右边的“闭眼”图标，可以切换密码可见状态
  * 点击注册按钮，如果注册成功则跳转到登录页面，如果注册失败则提示“邮箱已注册”
  
- ![](./images/register.jpg)
+ <img width="30%" src="./images/register.jpg">
 
 ### 用户登录
 
  * 输入电子邮箱账号和对应的密码
  * 点击登录按钮，若账号已注册且密码正确，则登录成功，若登录失败，则弹出失败原因。
- 
- ![](./images/login.png)		
+
+ <img width="30%" src="./images/login.png">
 
 ### 最近联系人页面
 
