--- a/小组分工与贡献率说明.md
+++ b/小组分工与贡献率说明.md
@@ -1,1 +1,34 @@
 # 小组分工与贡献率说明
+
+[客户端提交统计](https://github.com/SYSUMiniChat/MiniChat/graphs/contributors)、[服务端提交统计](https://github.com/SYSUMiniChat/MiniChatServer/graphs/contributors)
+
+学号|姓名|分工|贡献率
+----|----|----|------
+14331031|陈锐煌（组长）|客户端需求分析，参与客户端开发|26%
+14331386|郑斯达|客户端需求分析，参与客户端开发|25%
+14331016|陈海涛|客户端需求分析，UI设计，参与客户端开发|24%
+14331010|蔡桐钊|服务端需求分析，完成服务端开发，参与客户端开发|25%
+
+> 贡献率中客户端占70%，服务端占15%，UI设计占10%，文档占5%
+
+## 制品与贡献率
+### 源码
+制品|陈锐煌|郑斯达|陈海涛|蔡桐钊
+----|------|------|------|------
+服务端所有模块|0%|0%|0%|100%
+客户端SQLite数据库|0%|100%|0%|0%
+登录、注册界面及逻辑|0%|0%|100%|0%
+个人信息页面、信息修改实现|0%|0%|85%|15%
+通讯录界面、好友请求界面|0%|100%|0%|0%
+最近联系人界面、聊天界面|100%|0%|0%|0%
+网络访问、cookie管理等工具类|0%|50%|0%|50%
+整体布局，页面滑动|100%|0%|0%|0%
+UI设计|0%|0%|100%|0%
+
+### 文档
+制品|陈锐煌|郑斯达|陈海涛|蔡桐钊
+----|------|------|------|------
+安装部署说明|0%|50%|0%|50%
+用户手册|0%|0%|100%|0%
+软件需求规格说明书|50%|50%|0%|0%
+软件设计文档|50%|0%|0%|50%
