完善用户使用手册

--- a/用户使用手册.md
+++ b/用户使用手册.md
@@ -43,29 +43,41 @@ MiniChat微聊是一款简易版的聊天工具，包括登录注册，添加好
  * 输入密码和确认密码，点击右边的“闭眼”图标，可以切换密码可见状态
  * 点击注册按钮，如果注册成功则跳转到登录页面，如果注册失败则提示“邮箱已注册”
  
- <img width="30%" src="./images/register.jpg">
+ <img width="70%" src="./images/register.jpg">
 
 ### 用户登录
 
  * 输入电子邮箱账号和对应的密码
- * 点击登录按钮，若账号已注册且密码正确，则登录成功，若登录失败，则弹出失败原因。
+ * 点击登录按钮，若账号已注册且密码正确，则登录成功，跳转到最近联系人页面，若登录失败，则弹出失败原因。
 
- <img width="30%" src="./images/login.png">
+ <img width="70%" src="./images/login.png">
 
 ### 最近联系人页面
 
  * 该页面显示最近与你联系的好友的昵称、头像、最后一条聊天记录以及最后一条消息的时间。
 
+ <img width="70%" src="./images/recent.jpg">
+
  * 单击其中任意一项，跳转到好友聊天页面，并显示与该好友的聊天记录。
 
  * 长按其中任意一项，弹出对话框，提示是否删除该聊天记录。
 
+ <img width="70%" src="./images/deleteMessage.jpg">
+
 
 ### 通讯录页面
 
+ <img width="70%" src="./images/maillist.jpg">
+
  * 点击右上角加号，跳转到查找用户页面，输入用户账号，可进行搜索。
 
+ <img width="70%" src="./images/finduser.png">
+
+ <img width="70%" src="./images/userdetail.jpg">
+
  * 在搜索框内输入好友昵称，可查找通讯录中的好友。
+
+ <img width="70%" src="./images/retrieve.jpg">
 
  * 点击“新的朋友”，跳转到好友请求列表页面，显示所有的好友请求信息。点击“去看看”，跳转到好友信息页面，点击下方的“同意”或“拒绝”按钮，回复好友的请求操作。
 
@@ -73,20 +85,43 @@ MiniChat微聊是一款简易版的聊天工具，包括登录注册，添加好
 
  * 长按任意一个好友，弹出对话，提示是否删除该好友。
 
+ <img width="70%" src="./images/deleteuser.jpg">
+
+
 ### 个人信息页面
+
+ <img width="70%" src="./images/information.jpg">
 
  * 点击“头像”一栏，打开本地相册文件，选择图片设置头像。点击头像，查看大图。
 
+ <img width="70%" src="./images/selectpicture.jpg">
+
  * 点击“昵称”、“地区”、“Mini签名”这几栏，都会跳转到修改页面，输入新的内容后，点击保存按钮即可修改。若取消修改，点击左上方返回按钮。
+
+ <img width="70%" src="./images/modify.png">
 
  * 点击“Mini号”，提示“Mini号不可修改喔~”
 
  * 点击“性别”一栏，弹出对话框，选择“男”或“女”，点击“确定”或“取消”，进行对应的修改操作。
 
+ <img width="70%" src="./images/sex.jpg">
+
  * 点击“修改密码”一栏，弹出对话框，提示修改密码前要先填写原密码，输入正确密码后，点击“确认”按钮，跳转到设置密码页面。在这里输入新密码并确认密码后，点击保存按钮，若密码前后一致且修改成功，则跳转到个人信息页面。
 
+ <img width="70%" src="./images/confirm.jpg">
+
+ <img width="70%" src="./images/reset.png">
+
  * 点击“退出登录”一栏，弹出对话框，提示是否确定退出当前账号，点击“确定”或“取消”，进行对应的修改操作。
+
+ <img width="70%" src="./images/logout.jpg">
+
+
+
+ 
 
 ### 忘记密码页面
   
  * 输入要找回密码的账号，并点击“获取验证码”按钮，输入收到的验证码后，点击“下一步”文字，若验证成功，跳转到设置密码页面。修改操作同上。
+
+ <img width="70%" src="./images/forget.png">
